test/scc/expr/semantic-errors/085.t
void test()
{
    struct {int x;} a;
    10 > a;
}